Simplify sortByDaysToEvent for native Java